[gd_scene load_steps=7 format=3 uid="uid://bybhdom2ygbhs"]

[ext_resource type="Script" path="res://MapEditor/EditorModes/logic-editor.gd" id="1_v1s3j"]
[ext_resource type="Texture2D" uid="uid://bmgiot7r73eq5" path="res://Game Assets/GUI/backdrop2.png" id="2_j5yff"]
[ext_resource type="FontFile" uid="uid://c85eap4ne5fj8" path="res://Game Assets/Font/CraftPixNet Survival Kit.otf" id="3_bf8xf"]
[ext_resource type="Texture2D" uid="uid://dentiv7kcjumv" path="res://Game Assets/GUI/backdrop3.png" id="4_argxx"]
[ext_resource type="Texture2D" uid="uid://bckjurq5yr6w" path="res://Game Assets/GUI/Buttons/Button1.png" id="5_uiias"]
[ext_resource type="Texture2D" uid="uid://qtp5jl15i4wo" path="res://Game Assets/GUI/Buttons/Button2.png" id="6_xhdrl"]

[node name="Logic-editor" type="Node2D"]
script = ExtResource("1_v1s3j")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.266667)
offset_left = 11.0
offset_top = 203.0
offset_right = 211.0
offset_bottom = 636.0
texture = ExtResource("2_j5yff")
expand_mode = 1

[node name="OptionButton" type="OptionButton" parent="."]
offset_left = 27.0
offset_top = 244.0
offset_right = 191.0
offset_bottom = 264.0

[node name="Label" type="Label" parent="."]
offset_left = 34.0
offset_top = 213.0
offset_right = 187.0
offset_bottom = 236.0
theme_override_colors/font_color = Color(0.239216, 0.145098, 0.231373, 1)
theme_override_fonts/font = ExtResource("3_bf8xf")
theme_override_font_sizes/font_size = 20
text = "Place minigames"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_left = 16.0
offset_top = 291.0
offset_right = 212.0
offset_bottom = 628.0
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(188, 330)
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 3

[node name="TextureButton" type="TextureButton" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="MiniGameConfiguratorLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Title" type="Label" parent="MiniGameConfiguratorLayer"]
anchors_preset = -1
anchor_left = 0.437
anchor_top = 0.255
anchor_right = 0.622
anchor_bottom = 0.307
offset_left = -15.424
offset_top = 58.76
offset_right = -14.5441
offset_bottom = 59.064
theme_override_colors/font_color = Color(0.239216, 0.145098, 0.231373, 1)
theme_override_fonts/font = ExtResource("3_bf8xf")
theme_override_font_sizes/font_size = 24
text = "Configure minigame"

[node name="TextureRect" type="TextureRect" parent="MiniGameConfiguratorLayer"]
z_index = -1
anchors_preset = -1
anchor_left = 0.428
anchor_top = 0.238
anchor_right = 0.635
anchor_bottom = 0.46
offset_left = -15.056
offset_top = 58.776
offset_right = -15.5201
offset_bottom = 58.92
texture = ExtResource("4_argxx")
expand_mode = 1

[node name="ProceedButton" type="TextureButton" parent="MiniGameConfiguratorLayer"]
anchors_preset = -1
anchor_left = 0.431
anchor_top = 0.576
anchor_right = 0.51
anchor_bottom = 0.637
offset_left = 0.487976
offset_top = -0.248016
offset_right = -0.520081
offset_bottom = 0.223999
texture_normal = ExtResource("5_uiias")
texture_pressed = ExtResource("6_xhdrl")
stretch_mode = 0

[node name="Label" type="Label" parent="MiniGameConfiguratorLayer/ProceedButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.289
anchor_top = 0.15
anchor_right = 0.733
anchor_bottom = 0.725
offset_left = -0.0100002
offset_right = 0.0299988
theme_override_colors/font_color = Color(0.239216, 0.145098, 0.231373, 1)
theme_override_fonts/font = ExtResource("3_bf8xf")
theme_override_font_sizes/font_size = 18
text = "Next"

[node name="CancelButton" type="TextureButton" parent="MiniGameConfiguratorLayer"]
anchors_preset = -1
anchor_left = 0.529
anchor_top = 0.576
anchor_right = 0.607
anchor_bottom = 0.637
offset_left = -0.408081
offset_top = -0.248016
offset_right = -0.264038
offset_bottom = 0.223999
texture_normal = ExtResource("5_uiias")
texture_pressed = ExtResource("6_xhdrl")
stretch_mode = 0

[node name="Label" type="Label" parent="MiniGameConfiguratorLayer/CancelButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.211
anchor_top = 0.175
anchor_right = 0.8
anchor_bottom = 0.725
offset_left = 0.00999832
offset_bottom = 1.0
theme_override_colors/font_color = Color(0.239216, 0.145098, 0.231373, 1)
theme_override_fonts/font = ExtResource("3_bf8xf")
theme_override_font_sizes/font_size = 18
text = "Cancel"

[node name="DifficultySelection" type="Control" parent="MiniGameConfiguratorLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="MiniGameConfiguratorLayer/DifficultySelection"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.211
anchor_top = 0.175
anchor_right = 0.8
anchor_bottom = 0.725
offset_left = 486.56
offset_top = 267.0
offset_right = 532.0
offset_bottom = 268.0
theme_override_colors/font_color = Color(0.239216, 0.145098, 0.231373, 1)
theme_override_fonts/font = ExtResource("3_bf8xf")
theme_override_font_sizes/font_size = 15
text = "Difficulty:"

[node name="OptionButton" type="OptionButton" parent="MiniGameConfiguratorLayer/DifficultySelection"]
layout_mode = 0
offset_left = 589.0
offset_top = 274.0
offset_right = 684.0
offset_bottom = 294.0

[node name="Reward" type="Control" parent="MiniGameConfiguratorLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="MiniGameConfiguratorLayer/Reward"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.211
anchor_top = 0.175
anchor_right = 0.8
anchor_bottom = 0.725
offset_left = 488.56
offset_top = 306.0
offset_right = 534.0
offset_bottom = 307.0
theme_override_colors/font_color = Color(0.239216, 0.145098, 0.231373, 1)
theme_override_fonts/font = ExtResource("3_bf8xf")
theme_override_font_sizes/font_size = 15
text = "Reward:"

[node name="CheckBox" type="CheckBox" parent="MiniGameConfiguratorLayer/Reward"]
layout_mode = 0
offset_left = 566.0
offset_top = 308.0
offset_right = 621.0
offset_bottom = 334.0
theme_override_colors/font_color = Color(0.254902, 0.160784, 0.239216, 1)
theme_override_fonts/font = ExtResource("3_bf8xf")
text = "Key"

[node name="CheckBox2" type="CheckBox" parent="MiniGameConfiguratorLayer/Reward"]
layout_mode = 0
offset_left = 632.0
offset_top = 308.0
offset_right = 693.0
offset_bottom = 334.0
theme_override_colors/font_color = Color(0.239216, 0.145098, 0.231373, 1)
theme_override_fonts/font = ExtResource("3_bf8xf")
text = "Item"

[connection signal="item_selected" from="OptionButton" to="." method="_on_select_minigame"]
[connection signal="pressed" from="MiniGameConfiguratorLayer/ProceedButton" to="." method="_on_proceed_button_pressed"]
[connection signal="pressed" from="MiniGameConfiguratorLayer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="item_selected" from="MiniGameConfiguratorLayer/DifficultySelection/OptionButton" to="." method="_on_difficulty_selected"]
[connection signal="pressed" from="MiniGameConfiguratorLayer/Reward/CheckBox" to="." method="_on_key_check_box_checked"]
[connection signal="pressed" from="MiniGameConfiguratorLayer/Reward/CheckBox2" to="." method="_on_item_check_box_checked"]
